Definitional Compiler